ack, fix directories etc

--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -35,36 +35,36 @@
 	<meta property="og:description" content="{{ share_desc }}">
 
 	<!-- STYLES -->
-	<link rel="stylesheet" href="/styles/Merriweather/merriweather.css">
-    <link rel="stylesheet" href="/styles/Open_Sans/opensans.css">
-    <link rel="stylesheet" href="/styles/littlefoot.css"/> <!-- before page.css, so page can override it -->
-	<link rel="stylesheet" href="/styles/page.css">
+	<link rel="stylesheet" href="{{root}}styles/Merriweather/merriweather.css">
+    <link rel="stylesheet" href="{{root}}styles/Open_Sans/opensans.css">
+    <link rel="stylesheet" href="{{root}}styles/littlefoot.css"/> <!-- before page.css, so page can override it -->
+	<link rel="stylesheet" href="{{root}}styles/page.css">
 
 	<!-- SCRIPTS -->
 
     <!-- This website's own scripts -->
-	<script src="/scripts/page.js"></script>
+	<script src="{{root}}scripts/page.js"></script>
     <script>window.IS_DRAFT=true;</script>
 
     <!-- Littlefoot: for my feetnotes -->
-    <script src="/scripts/littlefoot.js" ></script>
+    <script src="{{root}}scripts/littlefoot.js" ></script>
 
     <!-- Nutshell: expandable explanations -->
-    <script src="/scripts/nutshell-v1.0.5.js"></script>
+    <script src="{{root}}scripts/nutshell-v1.0.5.js"></script>
     <script> Nutshell.setOptions({ startOnLoad: false, /* Start AFTER footnotes loaded */ }); </script>
 
     <!-- Orbit: make memory a choice -->
     <script type="module" src="https://js.withorbit.com/orbit-web-component.js"></script>
 
     <!-- MathJAX: for nice math -->
-    <script src="/scripts/tex-mml-chtml.js"></script>
+    <script src="{{root}}scripts/tex-mml-chtml.js"></script>
 
 </head>
 <body>
 
 <!-- HACKBRAND -->
 <a class="orpheus-flag" target="_blank" href="https://hackclub.com/">
-	<img src="/styles/orpheus-flag.svg" width="560" height="315" alt="A project by Hack Club" title="A project by Hack Club">
+	<img src="{{root}}styles/orpheus-flag.svg" width="560" height="315" alt="A project by Hack Club" title="A project by Hack Club">
 </a>
 
 <!-- The Sidebar UI -->
@@ -147,7 +147,7 @@
     -->
     <div id="header" class="article">
         <div id="splash_image">
-            <img id="splash_image_banner" src="/styles/assets/placeholder_banner.png"/>
+            <img id="splash_image_banner" src="{{root}}styles/assets/placeholder_banner.png"/>
         </div>
         <div id="header_words">
     		<div id="title">
