--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -225,7 +225,7 @@ What's confusing, interesting, what you like or dislike? Critical honest feedbac
 	<div id="footer">
 		<p>
 			asdasadsdasdas
-			<a href='https://creativecommons.org/publicdomain/zero/1.0/'>dedicated to the public domain!</a>
+			(todo: credits, newsletter, license)
         </p>
 	</div>
 
