--- a/templates/test_template.html
+++ b/templates/test_template.html
@@ -20,9 +20,11 @@ h1,h2,h3{
 
 <!-- {{bar}} -->
 
-{{INSERT_CONTENT_HERE}}
+{{content}}
 
 <!-- {{etc}} -->
 
 </body>
 </html>
+
+<script type="module" src="https://js.withorbit.com/orbit-web-component.js"></script>
