--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -222,7 +222,7 @@
     <!-- FOOTER -->
 	<div id="footer">
         <div id="footer_content">
-{% include "templates/footer.html" %}
+{% include 'templates/footer.html' %}
         </div>
 	</div>
     <div id="post_credits">
