--- a/templates/footer.html
+++ b/templates/footer.html
@@ -50,7 +50,7 @@ Also thank you to these non-teenagers for giving feedback:
 names
 </blockquote>
 <p>
-Any errors remaining in the work are solely the fault of
+Any errors remaining are solely the fault of
 <a href="TODO">Susan the Scapegoat</a>.
 </p>
 <p style="text-align:center">
