--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -242,6 +242,10 @@
     <br>
     <a href="#ConcreteRogueAI">: Concrete ways an AI could 'escape containment' & affect the world</a>
 </p>
+<p>
+    Also, the dancing robot catboy animation
+    is based off <a href="https://www.youtube.com/watch?v=yD2FSwTy2lw">this thing</a>.
+</p>
 {% elif isPartOne %}
 <p>
     <a href="#WhatsXOR">: What's XOR?</a>
