more dang fixes for littlefoot

--- a/styles/page.css
+++ b/styles/page.css
@@ -40,13 +40,20 @@ body[font_family=dyslexic]{
 /* LITTLEFOOTNOTES */
 /*******************************/
 
-.littlefoot {
-  --button-background-color: #ddd;
-  --button-active-background-color: #aaa;
-  --button-text-color: #888;
+
+.littlefoot{
+    /* A gray square moved up */
+    top: -0.5em;
+    left: -0.15em;
+    --button-border-radius: 0px;
+    --button-padding: 0px 0.4em;
+    --button-margin: 0px;
+    --button-background-color: #ddd;
+    --button-active-background-color: #aaa;
+    --button-text-color: #888;
 }
 .littlefoot__popover{
-    text-align: left;
+    text-align: justify;
 }
 /*
 What the hell? Bug with Littlefoot: when resize window
@@ -381,13 +388,7 @@ body[dark_mode=yes] .article-summary{
     opacity: 0.45;
 }
 
-.littlefoot{
-    top: -0.5em;
-    left: -0.15em;
-    --button-border-radius: 0px;
-    --button-padding: 0px 0.4em;
-    --button-margin: 0px;
-}
+
 
 /*******************************/
 /* ARCHIVE */
