--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -51,7 +51,7 @@
 
 <!-- HACKBRAND -->
 <a class="orpheus-flag" target="_blank" href="https://hackclub.com/">
-	<img src="{{root}}styles/orpheus-flag.svg" width="560" height="315" alt="A project by Hack Club" title="A project by Hack Club">
+	<img src="{{root}}styles/orpheus-flag.svg" width="560" height="315" alt="A project by Hack Club" aria-label="A project by Hack Club">
 </a>
 
 <!-- The Sidebar UI -->
@@ -85,10 +85,6 @@
             <input type="radio" name="style_font_family" value="sans_serif">
             <span style="font-family:'Open Sans'">Sans Serif</span>
         </label>
-        <br>
-        <a target='_blank' href='https://github.com/ncase/blog#open-source-font--code-credits' style='font-size: 0.85em;'>
-            (font credits)
-        </a>
         <br><br>
 
         <button id="style_reset">Reset</button>
